# django-geo-spaas-harvesting

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  Dockerfile  MANIFEST.in  README.md  dev.md  pyproject.toml  requirements.txt  runtests.py  setup.py
.github/workflows/: ci.yml  tests_build.yml
geospaas_harvesting/: __init__.py  arguments.py  check.yml  cli.py  config.py  config.yml  crawlers.py  harvest.py  harvest.yml  harvesters.py  ingesters.py  logging.yml  recovery.py  retry_ingest.py  runtests.py  settings.py  utils.py  verify.py  verify_urls.py
geospaas_harvesting/providers/: __init__.py  aviso.py  base.py  ceda.py  cmems.py  copernicus_scihub.py  creodias.py  earthdata_cmr.py  erddap.py  errors.py  ftp.py  http.py  jaxa.py  local.py  metadata_utils.py  metno.py  noaa.py  podaac.py  resto.py
geospaas_harvesting/tests/: test_crawlers.py  test_daemon_script.py
geospaas_harvesting/tests/data/: empty.html  opendap_folder.html  (+1 more)
scripts/: start_test_database.sh
tests/: __init__.py  stubs.py  test_arguments.py  test_cli.py  test_config.py  test_crawlers.py  test_daemon_script.py  test_generic_crawlers.py  test_harvesters.py  test_ingesters.py  test_recovery.py  test_utils.py  test_verify.py  test_verify_urls.py
tests/fixtures/: harvest.json
tests/providers/: test_aviso.py  test_base.py  test_ceda.py  test_cmems.py  test_copernicus_scihub.py  test_creodias.py  test_earthdata_cmr.py  test_erddap.py  test_ftp.py  test_http.py  test_jaxa.py  test_local.py  test_metadata_utils.py  test_metno.py  test_noaa.py  test_podaac.py  test_resto.py
(+29 files in other folders)
