[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "geospaas_harvesting"
description = "Metadata harvesting tool for GeoSPaaS"
readme = "README.md"
authors = [{name = "Adrien Perrin", email = "adrien.perrin@nersc.no"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"
dependencies = [
    "copernicusmarine",
    "django-geo-spaas",
    "django",
    "feedparser",
    "graypy",
    "metanorm",
    "nansat",
    "netCDF4",
    "numpy",
    "oauthlib",
    "pythesint>=1.7.0",
    "python-dateutil",
    "PyYAML",
    "requests_oauthlib",
    "requests",
    "shapely",
]
urls = {Repository = "https://github.com/nansencenter/django-geo-spaas-harvesting"}
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["geospaas_harvesting*"]
